--- a/SLURM.ipynb
+++ b/SLURM.ipynb
@@ -23,7 +23,7 @@
         "H-QTevQSJjJM"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNJCEBslMPxvUOZX4UHlYX4",
+      "authorship_tag": "ABX9TyPOFSBER6jhAr+ir3ZBicnW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -302,7 +302,7 @@
       "source": [
         "!scontrol version"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
         "id": "tVdSILtfYJGk",
         "outputId": "242246e7-3e9a-4b9c-f159-0ae5412fcfb9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +506,7 @@
       "metadata": {
         "id": "vsmGSDV_YcNS"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -549,7 +549,7 @@
         "id": "-wlRLDmLVPNj",
         "outputId": "10821dea-1a3f-4a0e-b68f-e7c8c706ec42"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -622,7 +622,7 @@
         "id": "zL87RRKqt2Ot",
         "outputId": "04b0b042-4be4-47df-8cea-73f6fb10c099"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,13 +656,13 @@
       "metadata": {
         "id": "pmr_NqNSt3VS"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Serve the Web app through `output`. Click on the link below."
+        "Serve the Web app through `output` (only works if in Google Colab). Click on the link below."
       ],
       "metadata": {
         "id": "zX4Dj9P5Cwbx"
@@ -671,18 +671,21 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import output\n",
-        "output.serve_kernel_port_as_window(5000)"
+        "import sys\n",
+        "# true if running on Google Colab\n",
+        "IN_COLAB = 'google.colab' in sys.modules\n",
+        "if IN_COLAB:\n",
+        "  from google.colab import output\n",
+        "  output.serve_kernel_port_as_window(5000)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "MdU_M04muIQ0",
         "outputId": "38787b18-0299-46e1-bb88-73a4e2ee82a7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -720,15 +723,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "JyUWeU-8DCTD"
-      },
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "!hostname -s"
       ],
@@ -739,7 +733,7 @@
         "id": "0EsfKH2VW2L4",
         "outputId": "2772f9bb-7c40-4a86-c87a-b6f6809ecb93"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,7 +775,7 @@
       "metadata": {
         "id": "2HPJoAE5Xpyy"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -805,7 +799,7 @@
       "metadata": {
         "id": "VhO4SsqMX0yP"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -852,7 +846,7 @@
         "id": "CAbDbtEWX_kP",
         "outputId": "30eef4a2-c404-45cf-948b-6be827a5380f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,7 +881,7 @@
         "id": "FXZ71G39ZKke",
         "outputId": "2c37045e-143f-4c78-bde1-cdd9009b6600"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -924,7 +918,7 @@
         "id": "iWWFjgBTfMal",
         "outputId": "6e62496a-493c-4d56-f1f4-895985180408"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -968,7 +962,7 @@
       "metadata": {
         "id": "kMpX-uFQfadO"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -999,7 +993,7 @@
         "id": "mkg0m1F5aIoy",
         "outputId": "d9bddad2-a551-41aa-c8c7-28f53760031e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1098,7 +1092,7 @@
         "id": "Mqr1tRXvkd5x",
         "outputId": "dc07d2fa-71f5-4a3d-8459-d63049f9efd1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1124,7 +1118,7 @@
         "id": "8RGthhyJk-cI",
         "outputId": "6939621d-3b83-460e-f882-855c70b2657a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,7 +1141,7 @@
         "id": "r_M2u0yJlQAI",
         "outputId": "e803d07a-c1c0-42bc-97b0-cadcf7945287"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1170,7 +1164,7 @@
         "id": "3BNaJMn8lTOs",
         "outputId": "2a02dede-83b9-42ff-ed68-cacbdc6384d2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1206,7 +1200,7 @@
         "id": "Zy9TZElhs__A",
         "outputId": "37efc090-e685-4695-bb7d-0e7eb246ac90"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1241,7 +1235,7 @@
         "id": "vbfx_M89t89I",
         "outputId": "176b8aed-10ca-4414-9b8b-831a3dbf4c68"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1368,7 +1362,7 @@
         "id": "NweDRLhSv8vu",
         "outputId": "6d122e19-b49d-42a1-e54f-7be552da9fb6"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1388,7 +1382,7 @@
       "metadata": {
         "id": "8RcwsrF_vn8n"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1403,7 +1397,7 @@
         "id": "xjp6H6rF9wq8",
         "outputId": "1d62f0b8-c99e-491f-ab98-02007c011d32"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1422,7 +1416,7 @@
       "metadata": {
         "id": "11ZA-QSy9xWZ"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1437,7 +1431,7 @@
         "id": "YUno8Yd2wqZ8",
         "outputId": "0db55470-d358-49eb-dab7-afd0bdb4255c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1509,7 +1503,7 @@
         "id": "DggIOqU23T0O",
         "outputId": "c8f4212d-28a9-4529-912c-a03851ba313d"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1529,7 +1523,7 @@
       "metadata": {
         "id": "sybAWfLO3m7k"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1544,7 +1538,7 @@
         "id": "86D15H5s3oOX",
         "outputId": "df30b64e-ec3d-4a4d-8d6d-29f8cd0399ea"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1572,7 +1566,7 @@
       "metadata": {
         "id": "zbE1yMeh8hXE"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1601,7 +1595,7 @@
         "id": "lV-5kRp68P-5",
         "outputId": "86d19140-0678-49b6-ea3b-8d719cc20b8a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1749,7 +1743,7 @@
         "id": "_aQNVDH9GbE_",
         "outputId": "bd82323b-d6a3-4a91-a754-50285871131b"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1782,7 +1776,7 @@
         "id": "TLSAq_b3GQUw",
         "outputId": "9372832c-be45-4e46-ed39-95a6a43a0046"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1904,7 +1898,7 @@
         "id": "GBz1pHcNzKm2",
         "outputId": "f7764cb3-e26c-44af-b178-520b1426e5e0"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2029,7 +2023,7 @@
         "id": "8VDa3EgH6qF9",
         "outputId": "3a7f76f0-65d0-4584-82e2-ecc474acc4e0"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2049,7 +2043,7 @@
       "metadata": {
         "id": "l_rfl0ZoB9lq"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2064,7 +2058,7 @@
         "outputId": "fd28c161-88fd-4f78-e6f6-a6cba9c324c8",
         "id": "5UVwLORdB9lr"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2083,7 +2077,7 @@
       "metadata": {
         "id": "dDRlp4NxIItS"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2118,7 +2112,7 @@
         "# After the job is finished (or timeout), you can attempt to view the output files\n",
         "!cat slurm-{JOB_ID}.out"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2262,7 +2256,7 @@
         "id": "eRu-PXfqCDRq",
         "outputId": "537bf446-675d-4a6d-e4b0-6f7242213318"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2285,7 +2279,7 @@
         "id": "CxwVhGWBJaiS",
         "outputId": "db50536a-4a4d-46eb-9734-fd44f7ce1eca"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2416,7 +2410,7 @@
         "id": "JL98l_IeCHSC",
         "outputId": "5eb10877-96b6-4e64-edad-08fb0f0ac632"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2525,7 +2519,7 @@
         "id": "Cbm1MZpGKGJ7",
         "outputId": "b094f0d9-2dbb-4f98-85f8-3537241a3e85"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2545,7 +2539,7 @@
       "metadata": {
         "id": "jVwyexBvPSlo"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2560,7 +2554,7 @@
         "outputId": "0cb62fd4-0ade-4f54-fe2d-07751283c991",
         "id": "R31dwxDUPSlo"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2579,7 +2573,7 @@
       "metadata": {
         "id": "8tAubOxOPSlo"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2594,7 +2588,7 @@
         "id": "CUsNuDUEPiqO",
         "outputId": "25f98c56-eb02-4ff4-ea5c-55079f3c39b9"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2644,7 +2638,7 @@
         "id": "As0ynV5aPsMH",
         "outputId": "fc6dc8f1-8d47-4299-92e5-d86e0181b6b7"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2781,7 +2775,7 @@
         "outputId": "32bee5db-1e20-4f10-a741-8ca47c5aec62",
         "id": "7ykU5BrbPSlp"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2805,7 +2799,7 @@
         "outputId": "e2d2b6d8-2e7e-46da-81b2-d6ad6298199b",
         "id": "92z9_UunPSlp"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2972,7 +2966,7 @@
         "echo \"Running on node: $SLURM_NODELIST\"\n",
         "sleep 5 # Simulate some work"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2992,7 +2986,7 @@
         "# Make the script executable\n",
         "!chmod +x simple_array_job.sh"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3004,7 +2998,7 @@
       "metadata": {
         "id": "xUPZcDTAOkzZ"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3019,7 +3013,7 @@
         "outputId": "021bc76c-38f6-445c-f692-0c362e829d61",
         "id": "xaK_nI1VKZZp"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3038,7 +3032,7 @@
       "metadata": {
         "id": "A51WVhrIKZZp"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3054,7 +3048,7 @@
         "# Check the job status (optional)\n",
         "!squeue"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3092,7 +3086,7 @@
         "id": "7-m6lyZDLNXh",
         "outputId": "59248c50-de85-4769-8cbf-b65db56f6350"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3139,7 +3133,7 @@
         "id": "VtuEXWDmLHHF",
         "outputId": "8d403651-bc09-4047-eb2f-d6ac24b5bd5a"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
