Set JAVA_HOME dynamically

--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -5,7 +5,21 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "oEF3qldGPj3T",
+        "oUuQjW2oNMcJ",
         "qFfOrktMPq8M",
+        "ozBfXXK8HoSq",
+        "KE7kSYSXQYLf",
+        "RlgP1ytnRtUK",
+        "KLmxLQeJSb4A",
+        "kXbSKFyeMqr2",
+        "k2-Fdp73cF0V",
+        "-Uxmv3RdUwiF",
+        "V68C4cDySyek",
+        "HTDPwnVlSbHS",
+        "xMrEiLB_VAeR",
+        "CKRRbwDFv3ZQ",
+        "G3KBe4R65bl1",
         "IF6-Z5RotAcO"
       ],
       "toc_visible": true
@@ -178,6 +192,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Set `JAVA_HOME`"
+      ],
+      "metadata": {
+        "id": "ozBfXXK8HoSq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Find the path for the environment variable `JAVA_HOME`"
       ],
       "metadata": {
@@ -233,18 +256,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "os.environ['JAVA_HOME'] = '/usr/lib/jvm/java-17-openjdk-amd64'"
-      ],
-      "metadata": {
-        "id": "A5Z5lsrX-Gbb"
-      },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Extract `JAVA_HOME` from the Java path by removing the `bin/java` part in the end"
@@ -252,6 +263,40 @@
       "metadata": {
         "id": "rGHKH3Vu9Nwl"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import subprocess\n",
+        "import os\n",
+        "\n",
+        "java_home = subprocess.check_output(\n",
+        "    \"readlink -f $(which java) | sed 's:/bin/java$::'\",\n",
+        "    shell=True,\n",
+        "    text=True\n",
+        ").strip()\n",
+        "\n",
+        "os.environ[\"JAVA_HOME\"] = java_home\n",
+        "\n",
+        "print(\"JAVA_HOME =\", os.environ[\"JAVA_HOME\"])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A5Z5lsrX-Gbb",
+        "outputId": "9e5d6dff-0304-4741-d848-9511d83acac7"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "JAVA_HOME = /usr/lib/jvm/java-17-openjdk-amd64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -981,7 +1026,7 @@
         "hdfs dfs -mkdir /user/root # this is the \"home\" of user root on HDFS\n",
         "hdfs dfs -mkdir my_dir\n",
         "\n",
-        "# if sampls_data does not exist, create it (so that the notebook can run also outside of Colab)\n",
+        "# if sampls_data does not exist, create it\n",
         "mkdir -p sample_data\n",
         "touch sample_data/mnist_test.csv\n",
         "\n",
