fix hard-coded JAVA_HOME

--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -21,7 +21,8 @@
         "CKRRbwDFv3ZQ",
         "G3KBe4R65bl1",
         "IF6-Z5RotAcO"
-      ]
+      ],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -776,7 +777,8 @@
         "%%bash\n",
         "cp -n hadoop-3.4.2/etc/hadoop/hadoop-env.sh hadoop-3.4.2/etc/hadoop/hadoop-env.sh.org\n",
         "cat <<😃 >hadoop-3.4.2/etc/hadoop/hadoop-env.sh\n",
-        "export JAVA_HOME=\"/usr/lib/jvm/java-17-openjdk-amd64\"\n",
+        "export JAVA_HOME=$JAVA_HOME\n",
+        "export HADOOP_HOME=$HADOOP_HOME\n",
         "export HDFS_NAMENODE_USER=root\n",
         "export HDFS_DATANODE_USER=root\n",
         "export HDFS_SECONDARYNAMENODE_USER=root\n",
