Fix: Replace hard-coded paths with dynamic lookup for enhanced environment compatibility.

--- a/mrjob_wordcount.ipynb
+++ b/mrjob_wordcount.ipynb
@@ -33,7 +33,7 @@
       ],
       "metadata": {
         "id": "JBhcJ_vxyObq",
-        "outputId": "5ade0651-961f-4be7-e7e0-24c9dabcb7a8",
+        "outputId": "41f11977-7133-4307-c6c1-f4314830e66d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -44,13 +44,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting mrjob\n",
-            "  Downloading mrjob-0.7.4-py2.py3-none-any.whl.metadata (7.3 kB)\n",
-            "Requirement already satisfied: PyYAML>=3.10 in /usr/local/lib/python3.12/dist-packages (from mrjob) (6.0.3)\n",
-            "Downloading mrjob-0.7.4-py2.py3-none-any.whl (439 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m439.6/439.6 kB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: mrjob\n",
-            "Successfully installed mrjob-0.7.4\n"
+            "Requirement already satisfied: mrjob in /usr/local/lib/python3.12/dist-packages (0.7.4)\n",
+            "Requirement already satisfied: PyYAML>=3.10 in /usr/local/lib/python3.12/dist-packages (from mrjob) (6.0.3)\n"
           ]
         }
       ]
@@ -71,7 +66,7 @@
       ],
       "metadata": {
         "id": "QtlHwXwEySPD",
-        "outputId": "f7b1fc28-f441-4c90-865a-672faa74d18d",
+        "outputId": "bd903740-970f-49c9-ab24-01e1edbdfd97",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -88,6 +83,38 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!pip show mrjob"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BTokmPInF9Ev",
+        "outputId": "8bfa6cd8-e161-4b17-8498-5108a9df193d"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name: mrjob\n",
+            "Version: 0.7.4\n",
+            "Summary: Python MapReduce framework\n",
+            "Home-page: http://github.com/Yelp/mrjob\n",
+            "Author: David Marin\n",
+            "Author-email: dm@davidmarin.org\n",
+            "License: Apache\n",
+            "Location: /usr/local/lib/python3.12/dist-packages\n",
+            "Requires: PyYAML\n",
+            "Required-by: \n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Here's the list of examples:"
@@ -99,16 +126,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!ls /usr/local/lib/python3.12/dist-packages/mrjob/examples"
+        "!ls $(pip show mrjob | grep Location | cut -d ' ' -f 2)/mrjob/examples"
       ],
       "metadata": {
         "id": "tJUj12vAylCk",
-        "outputId": "224bf191-b5cc-43a6-f74b-e24349ced79d",
+        "outputId": "84b47e1e-dd27-4ad0-f695-80b80ee29d53",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,16 +170,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!cat /usr/local/lib/python3.12/dist-packages/mrjob/examples/mr_wc.py"
+        "!cat $(pip show mrjob | grep Location | cut -d ' ' -f 2)/mrjob/examples/mr_wc.py"
       ],
       "metadata": {
         "id": "_MPypLJnyzQZ",
-        "outputId": "7852619e-0377-40aa-ae1d-c798f0776bb6",
+        "outputId": "2e70e1be-450a-402e-e14e-98017aa44d7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +239,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let us create a symbolic link to `/usr/local/lib/python3.12/dist-packages/mrjob/examples` so that we don't need to type long paths (and the folder is visible in the left pane)."
+        "Let us create a symbolic link to `/usr/local/lib/.../dist-packages/mrjob/examples` so that we don't need to type long paths (and the folder is visible in the left pane)."
       ],
       "metadata": {
         "id": "wWvXygBjzWbl"
@@ -221,12 +248,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!ln -s /usr/local/lib/python3.12/dist-packages/mrjob/examples examples"
+        "!ln -s $(pip show mrjob | grep Location | cut -d ' ' -f 2)/mrjob/examples examples"
       ],
       "metadata": {
         "id": "ntSu0qgmzgkF"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -245,44 +272,44 @@
       ],
       "metadata": {
         "id": "ov3QzMzCzpWJ",
-        "outputId": "d4726569-ab50-4211-ee19-04c7c6d858eb",
+        "outputId": "6ef1de27-4d6b-43eb-b2c3-849d06da9a66",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "total 88K\n",
-            "-rw-r--r-- 1 root root 9.4K Oct 10 21:18 american_feuillage-whitman-america.txt\n",
-            "-rw-r--r-- 1 root root  933 Oct 10 21:18 as_i_ponderd_in_silence-whitman.txt\n",
-            "-rw-r--r-- 1 root root 1.2K Oct 10 21:18 buckingham_palace-milne-not_america.txt\n",
-            "-rw-r--r-- 1 root root  20K Oct 10 21:18 chants_democratic-whitman-america.txt\n",
-            "-rw-r--r-- 1 root root  288 Oct 10 21:18 corner_of_the_street-milne-not_whitman.txt\n",
-            "-rw-r--r-- 1 root root  154 Oct 10 21:18 happiness-milne.txt\n",
-            "-rw-r--r-- 1 root root 1.5K Oct 10 21:18 in_cabind_ships_at_sea-whitman.txt\n",
-            "-rw-r--r-- 1 root root  326 Oct 10 21:18 lines_and_squares-milne-animals.txt\n",
-            "-rw-r--r-- 1 root root  432 Oct 10 21:18 ones_self_i_sing-whitman.txt\n",
-            "-rw-r--r-- 1 root root 1.2K Oct 10 21:18 puppy_and_i-milne-animals.txt\n",
-            "-rw-r--r-- 1 root root  415 Oct 10 21:18 the_christening-milne-animals.txt\n",
-            "-rw-r--r-- 1 root root  869 Oct 10 21:18 the_four_friends-milne-animals.txt\n",
-            "-rw-r--r-- 1 root root  500 Oct 10 21:18 to_a_historian-whitman.txt\n",
-            "-rw-r--r-- 1 root root  193 Oct 10 21:18 to_foreign_lands-whitman-america.txt\n",
-            "-rw-r--r-- 1 root root  895 Oct 10 21:18 to_thee_old_cause-whitman.txt\n",
-            "-rw-r--r-- 1 root root  226 Oct 10 21:18 twinkletoes-milne.txt\n"
+            "-rw-r--r-- 1 root root 9.4K Feb  7 17:11 american_feuillage-whitman-america.txt\n",
+            "-rw-r--r-- 1 root root  933 Feb  7 17:11 as_i_ponderd_in_silence-whitman.txt\n",
+            "-rw-r--r-- 1 root root 1.2K Feb  7 17:11 buckingham_palace-milne-not_america.txt\n",
+            "-rw-r--r-- 1 root root  20K Feb  7 17:11 chants_democratic-whitman-america.txt\n",
+            "-rw-r--r-- 1 root root  288 Feb  7 17:11 corner_of_the_street-milne-not_whitman.txt\n",
+            "-rw-r--r-- 1 root root  154 Feb  7 17:11 happiness-milne.txt\n",
+            "-rw-r--r-- 1 root root 1.5K Feb  7 17:11 in_cabind_ships_at_sea-whitman.txt\n",
+            "-rw-r--r-- 1 root root  326 Feb  7 17:11 lines_and_squares-milne-animals.txt\n",
+            "-rw-r--r-- 1 root root  432 Feb  7 17:11 ones_self_i_sing-whitman.txt\n",
+            "-rw-r--r-- 1 root root 1.2K Feb  7 17:11 puppy_and_i-milne-animals.txt\n",
+            "-rw-r--r-- 1 root root  415 Feb  7 17:11 the_christening-milne-animals.txt\n",
+            "-rw-r--r-- 1 root root  869 Feb  7 17:11 the_four_friends-milne-animals.txt\n",
+            "-rw-r--r-- 1 root root  500 Feb  7 17:11 to_a_historian-whitman.txt\n",
+            "-rw-r--r-- 1 root root  193 Feb  7 17:11 to_foreign_lands-whitman-america.txt\n",
+            "-rw-r--r-- 1 root root  895 Feb  7 17:11 to_thee_old_cause-whitman.txt\n",
+            "-rw-r--r-- 1 root root  226 Feb  7 17:11 twinkletoes-milne.txt\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "0WSY1wUcs42O",
-        "outputId": "6a65a70f-271a-42f6-e6f0-7ad4086858d6",
+        "outputId": "24dbd6cb-e083-42d5-d517-653508ff41e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -293,8 +320,8 @@
           "name": "stdout",
           "text": [
             "\"lines\"\t660\n",
-            "\"words\"\t6371\n",
-            "\"chars\"\t37967\n"
+            "\"chars\"\t37967\n",
+            "\"words\"\t6371\n"
           ]
         },
         {
@@ -303,11 +330,11 @@
           "text": [
             "No configs found; falling back on auto-configuration\n",
             "No configs specified for inline runner\n",
-            "Creating temp directory /tmp/mr_wc.root.20251010.211910.064207\n",
+            "Creating temp directory /tmp/mr_wc.root.20260207.172720.278294\n",
             "Running step 1 of 1...\n",
-            "job output is in /tmp/mr_wc.root.20251010.211910.064207/output\n",
-            "Streaming final output from /tmp/mr_wc.root.20251010.211910.064207/output...\n",
-            "Removing temp directory /tmp/mr_wc.root.20251010.211910.064207...\n"
+            "job output is in /tmp/mr_wc.root.20260207.172720.278294/output\n",
+            "Streaming final output from /tmp/mr_wc.root.20260207.172720.278294/output...\n",
+            "Removing temp directory /tmp/mr_wc.root.20260207.172720.278294...\n"
           ]
         }
       ],
@@ -335,12 +362,12 @@
       ],
       "metadata": {
         "id": "4QKl1xclwCtj",
-        "outputId": "4b8ec425-341d-4241-cfd9-3d7c14021f1e",
+        "outputId": "ea617440-4cb2-4071-b39d-13f2138cef0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,12 +394,12 @@
       ],
       "metadata": {
         "id": "8DsTxmVC3ScJ",
-        "outputId": "45df2d77-5564-4cdc-ba2e-7b4d0208a732",
+        "outputId": "e50a4adb-8ecc-4996-acca-0486b859c614",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +409,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -393,12 +420,12 @@
       ],
       "metadata": {
         "id": "T8Als_X74Ks1",
-        "outputId": "61b6613b-5e65-4a81-85df-4f852d3d17e8",
+        "outputId": "a0e52ff2-ddbb-4e72-b3a4-a9f755665ebc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,12 +450,12 @@
       ],
       "metadata": {
         "id": "sTpsgC0m3czJ",
-        "outputId": "e14b1e49-e61b-4eab-e92d-286ed9c9eda4",
+        "outputId": "3fcb6278-7d83-4d7b-b50d-0664ab89ea5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,12 +515,12 @@
       ],
       "metadata": {
         "id": "jRIQ4Nei3c5v",
-        "outputId": "b1412730-4546-41e7-be0a-c58454dc6bc2",
+        "outputId": "59d97d21-c1d1-4fdc-e192-21dad62afc93",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,12 +571,12 @@
       ],
       "metadata": {
         "id": "WoePPoub6kdD",
-        "outputId": "8e3d2ece-0724-4008-d037-b955acba3859",
+        "outputId": "fe6a54b4-0c49-46c5-8936-8419cf97e301",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,12 +594,12 @@
       ],
       "metadata": {
         "id": "NhHZox6j6v2L",
-        "outputId": "bf715979-333c-4b82-e82b-4deb158d66a7",
+        "outputId": "bf3eb818-caca-4036-ea89-559275e765f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,12 +633,12 @@
       ],
       "metadata": {
         "id": "vgZ7p68T7stq",
-        "outputId": "72acd601-756a-4aea-f393-977075b94594",
+        "outputId": "b6e40717-7a18-4079-9813-4b48ba61c5dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,10 +682,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 17,
       "metadata": {
         "id": "lk55j4zks42L",
-        "outputId": "beb0d157-bab5-41e2-ea97-d3cc5010dcc9",
+        "outputId": "98035567-8dc5-460a-a66a-ebe871709d72",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -715,6 +742,15 @@
       ],
       "metadata": {
         "id": "HsZIEDzkuBcb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> 💡 Reviving an open-source project like `mrjob` would be a valuable contribution to the world of open-source. The ncurrent repository can be found in https://github.com/Yelp/mrjob."
+      ],
+      "metadata": {
+        "id": "226MPEqzHQB3"
       }
     }
   ],
