--- a/Ngrams.ipynb
+++ b/Ngrams.ipynb
@@ -16,6 +16,7 @@
         "id": "dZzCm85z_kSp"
       },
       "source": [
+        "<a href=\"https://github.com/groda/big_data\"><div><img src=\"https://github.com/groda/big_data/blob/master/logo_bdb.png?raw=true\" align=right width=\"90\"></div></a>\n",
         "# Ngrams with PySpark\n",
         "\n"
       ]
