--- a/Ngrams.ipynb
+++ b/Ngrams.ipynb
@@ -18,7 +18,10 @@
       "source": [
         "<a href=\"https://github.com/groda/big_data\"><div><img src=\"https://github.com/groda/big_data/blob/master/logo_bdb.png?raw=true\" align=right width=\"90\"></div></a>\n",
         "# Ngrams with PySpark\n",
-        "\n"
+        "\n",
+        "This notebook serves as a practical demonstration of leveraging Apache Spark (PySpark) for large-scale data processing, specifically focusing on the computation of N-grams.\n",
+        "\n",
+        "It showcases fundamental Spark concepts, such as transformations and actions, by applying them to two distinct and massive real-world datasets: web data from the Common Crawl archive and genomic data.\n"
       ]
     },
     {
@@ -94,7 +97,7 @@
         "id": "h5UyqZZxD5UB",
         "outputId": "1b893e42-66de-484f-e2e8-7e9b9c26aa79"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +150,7 @@
         "id": "6VLfPfrBEgTJ",
         "outputId": "50054b28-85ef-482e-9c03-e22c512739af"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +201,7 @@
         "id": "rLwIPXCBjMET",
         "outputId": "cb855849-2da0-4d6e-cecd-ea998b1f5361"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,7 +287,7 @@
         "id": "otV1BwldhqqO",
         "outputId": "6ff6c35f-91db-4c82-ff99-2390b02da55c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +323,7 @@
         "id": "bYtN-3ddkl_i",
         "outputId": "bb7ac047-9189-4b56-971a-c05578015bae"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "QLCYd7Bu_kSs",
         "colab": {
@@ -395,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "ETZPHL0E_kSt",
         "colab": {
@@ -460,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "k-woCjQS_kSu",
         "colab": {
@@ -497,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "8CrbMDAF_kSv"
       },
@@ -527,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "Rj7GdBIR_kSv",
         "colab": {
@@ -616,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "fyzLH4uH_kSv",
         "colab": {
@@ -745,7 +748,7 @@
         "except Exception as e:\n",
         "    print(f\"Error during decompression: {e}\")\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "1ywIKMjV_kSx",
         "colab": {
@@ -793,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "LFOQ7Al7_kSx",
         "colab": {
@@ -893,12 +896,12 @@
       "metadata": {
         "id": "1Az6ZV9F-q-l"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "umR0iJOD_kSx"
       },
@@ -914,7 +917,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "-LMDIQ2v_kSx"
       },
@@ -934,7 +937,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "bKTBuTbP_kSy",
         "colab": {
@@ -967,7 +970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "njpjrTtk_kSy",
         "colab": {
